--- a/src/sass/global/fonts.scss
+++ b/src/sass/global/fonts.scss
@@ -4,8 +4,8 @@
   font-family: "Roboto";
 
   font-display: swap;
-  src: url("~@/assets/fonts/roboto-regular.woff2") format("woff2"),
-  url("~@/assets/fonts/roboto-regular.woff") format("woff");
+  src: url("@/assets/fonts/roboto-regular.woff2") format("woff2"),
+  url("@/assets/fonts/roboto-regular.woff") format("woff");
 }
 
 @font-face {
@@ -14,8 +14,8 @@
   font-family: "Roboto";
 
   font-display: swap;
-  src: url("~@/assets/fonts/roboto-medium.woff2") format("woff2"),
-  url("~@/assets/fonts/roboto-medium.woff") format("woff");
+  src: url("@/assets/fonts/roboto-medium.woff2") format("woff2"),
+  url("@/assets/fonts/roboto-medium.woff") format("woff");
 }
 
 @font-face {
@@ -24,6 +24,6 @@
   font-family: "Roboto";
 
   font-display: swap;
-  src: url("~@/assets/fonts/roboto-bold.woff2") format("woff2"),
-  url("~@/assets/fonts/roboto-bold.woff") format("woff");
+  src: url("@/assets/fonts/roboto-bold.woff2") format("woff2"),
+  url("@/assets/fonts/roboto-bold.woff") format("woff");
 }
